--- a/src/main/resources/templates/user/category/_cateNav.html
+++ b/src/main/resources/templates/user/category/_cateNav.html
@@ -10,27 +10,10 @@
 
 	<ul class="cat_menu">
 		<li th:each="cate : ${categories}">
-			<a th:href="@{|/user/product/category/${cate.id}|}" th:text="${cate.name}">
+			<a th:href="@{|/user/product/category?id=${cate.id}|}" th:text="${cate.name}">
 			<i class="fas fa-chevron-right ml-auto"></i></a>
 		</li>
-		<!-- <li><a href="#">Cameras & Photos<i
-				class="fas fa-chevron-right"></i></a></li>
-		<li class="hassubs"><a href="#">Hardware<i
-				class="fas fa-chevron-right"></i></a>
-			<ul>
-				<li class="hassubs"><a href="#">Menu Item<i
-						class="fas fa-chevron-right"></i></a>
-					<ul>
-						<li><a href="#">Menu Item<i class="fas fa-chevron-right"></i></a></li>
-						<li><a href="#">Menu Item<i class="fas fa-chevron-right"></i></a></li>
-						<li><a href="#">Menu Item<i class="fas fa-chevron-right"></i></a></li>
-						<li><a href="#">Menu Item<i class="fas fa-chevron-right"></i></a></li>
-					</ul></li>
-				<li><a href="#">Menu Item<i class="fas fa-chevron-right"></i></a></li>
-				<li><a href="#">Menu Item<i class="fas fa-chevron-right"></i></a></li>
-				<li><a href="#">Menu Item<i class="fas fa-chevron-right"></i></a></li>
-			</ul>
-		</li>-->
+		
 	</ul>
 </div>
 </html>
