--- a/src/main/resources/templates/user/order/detail.html
+++ b/src/main/resources/templates/user/order/detail.html
@@ -13,10 +13,11 @@ th:replace="~{/user/shared/layout::dynamic(~{::main})}" >
 		            <label>Order Date</label>
 		            <input th:field="*{orderDate}" class="form-control" readonly>
 		        </div>
-		        <div class="col">
-		            <label>Total Amount</label>
-		            <input th:field="*{total}" class="form-control" readonly>
+		         <div class="col">
+		            <label>Order Date</label>
+		            <input th:field="*{orderDate}" class="form-control" readonly>
 		        </div>
+		       
 	        </div>
 	        <div class="row mb-3">
 		        <div class="col">
