--- a/src/main/resources/templates/user/shared/header.html
+++ b/src/main/resources/templates/user/shared/header.html
@@ -39,7 +39,7 @@ $("a[href*=lang]").on("click",function(){
         class="collapse navbar-collapse justify-content-between"
         id="navbarCollapse">
         <div class="navbar-nav mr-auto">
-          <a href="index.html" class="nav-item nav-link" th:text="#{menu.home}">Home</a>
+          <a href="#" class="nav-item nav-link" th:text="#{menu.home}">Home</a>
           <a href="/user/product/index" class="nav-item nav-link active"
             th:text="#{menu.products}"> Products</a
           >
