--- a/src/main/resources/templates/user/product/_share-dialog.html
+++ b/src/main/resources/templates/user/product/_share-dialog.html
@@ -12,22 +12,17 @@
 			<!-- Modal body -->
 			<div class="modal-body">
 				<div class="mb-3">
-					<label>Sender</label>
-					<input id="sender" type="email" class="form-control">
+					<label>Receiver</label> <input id="receiver" type="email"
+						class="form-control">
 				</div>
 				<div class="mb-3">
-					<label>Receiver</label>
-					<input id="receiver" type="email" class="form-control">
-				</div>
-				<div class="mb-3">
-					<label>Subject</label>
-					<input id="subject" class="form-control">
+					<label>Subject</label> <input id="subject" class="form-control">
 				</div>
 				<div class="mb-3">
 					<label>Text</label>
 					<textarea id="text" rows="3" class="form-control"></textarea>
 				</div>
-				
+
 			</div>
 
 			<!-- Modal footer -->
